force-app/main/default/objects/Implementation_Task__c/Implementation_Task__c.object-meta.xml
<CustomObject>
    <label>Implementation Task</label>
    <nameField>
        <label>Implementation Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>