force-app/main/default/objects/Implementation_Task__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Implementation_Plan__r.Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>