force-app/main/default/objects/Implementation_Task__c/fields/Dependency_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Due_Date__c</fullName>
    <formula>Implementation_Plan__r.Planned_Start_Date__c  +  Task_Dependency__r.Task_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependency Due Date</label>
    <type>Date</type>
</CustomField>