force-app/main/default/objects/Implementation_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>if(!isblank(Due_Date_Override__c),Due_Date_Override__c,
IF( ISBLANK( Task_Dependency__r.Id ),
if(isblank(Implementation_Plan__r.Planned_Start_Date__c), null, Implementation_Plan__r.Planned_Start_Date__c +  Task_Duration__c),
if(isblank(Task_Dependency__r.Completed_Date__c),null,Task_Dependency__r.Completed_Date__c) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>