force-app/main/default/objects/Implementation_Task__c/fields/Due_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Override__c</fullName>
    <label>Due Date Override</label>
    <type>Date</type>
</CustomField>