force-app/main/default/objects/Implementation_Task__c/fields/Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Plan</label>
    <referenceTo>Implementation_Plan__c</referenceTo>
    <relationshipLabel>Implementation Task</relationshipLabel>
    <relationshipName>Implementation_Task</relationshipName>
    <type>Lookup</type>
</CustomField>