force-app/main/default/objects/Implementation_Task__c/fields/Implementation_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Task Template</label>
    <referenceTo>Implementation_Task_Template__c</referenceTo>
    <relationshipLabel>Implementation Task</relationshipLabel>
    <relationshipName>Implementation_Task</relationshipName>
    <type>Lookup</type>
</CustomField>