force-app/main/default/objects/Implementation_Task__c/fields/Task_Completion_Hours__c.field-meta.xml
<CustomField>
    <fullName>Task_Completion_Hours__c</fullName>
    <description>Field for the user to add the hours it took to complete a task when they are done with the task</description>
    <inlineHelpText>How many hours did it take to complete this task?</inlineHelpText>
    <label>Task Completion Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>