force-app/main/default/objects/Implementation_Task__c/fields/Task_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Task_Dependency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self Lookup to Implementation Task</description>
    <label>Task Dependency</label>
    <referenceTo>Implementation_Task__c</referenceTo>
    <relationshipLabel>Implementation Task</relationshipLabel>
    <relationshipName>Implementation_Task</relationshipName>
    <type>Lookup</type>
</CustomField>