force-app/main/default/objects/Implementation_Task__c/fields/Task_Duration__c.field-meta.xml
<CustomField>
    <fullName>Task_Duration__c</fullName>
    <label>Task Duration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>