force-app/main/default/objects/Implementation_Task__c/fields/Unique_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Unique_Sequence__c</fullName>
    <label>Unique Sequence</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>