force-app/main/default/objects/Implementation_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Implementation_Task_Template__c</columns>
    <columns>Task_Dependency__c</columns>
    <columns>Revenue_Recognition__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>