force-app/main/default/objects/Implementation_Task__c/listViews/GSS_NA_Implementation_Agents.listView-meta.xml
<ListView>
    <fullName>GSS_NA_Implementation_Agents</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>GSS NA Implementation Agents</label>
    <sharedTo>
        <role>GSS_APAC_Implementation_Agent</role>
    </sharedTo>
</ListView>