force-app/main/default/objects/Implementation_Task__c/listViews/RxWorks_Finance_UK_Implementation_Task.listView-meta.xml
<ListView>
    <fullName>RxWorks_Finance_UK_Implementation_Task</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Implementation_Plan__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress,Ready to Start</value>
    </filters>
    <label>RxWorks Finance - UK</label>
    <queue>RxWorks_Finance_UK</queue>
    <sharedTo>
        <group>RxWorks_Finance_UK</group>
    </sharedTo>
</ListView>