force-app/main/default/objects/Implementation_Task__c/listViews/RxWorks_Implementation_Implementation_Task.listView-meta.xml
<ListView>
    <fullName>RxWorks_Implementation_Implementation_Task</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Implementation_Plan__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Queue</filterScope>
    <label>RxWorks Implementation</label>
    <queue>RxWorks_Implementation</queue>
    <sharedTo>
        <group>RxWorks_Implementation</group>
    </sharedTo>
</ListView>