force-app/main/default/objects/Implementation_Task__c/listViews/RxWorks_Tasks_UK.listView-meta.xml
<ListView>
    <fullName>RxWorks_Tasks_UK</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Implementation_Plan__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>RxWorks Chargeable Activities - UK,Hannah,MartinF,Michael,Alvar,Callum,Niall</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>RxWorks Tasks - UK</label>
    <sharedTo>
        <group>RxWorks_Chargeable_Activities_UK</group>
    </sharedTo>
</ListView>