force-app/main/default/objects/Implementation_Task__c/listViews/VisionVPM_Hardware_Implementation_Task.listView-meta.xml
<ListView>
    <fullName>VisionVPM_Hardware_Implementation_Task</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Implementation_Plan__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Queue</filterScope>
    <label>VisionVPM Hardware</label>
    <queue>VisionVPM_Hardware</queue>
    <sharedTo>
        <group>VisionVPM_Hardware</group>
    </sharedTo>
</ListView>