force-app/main/default/objects/Implementation_Task__c/listViews/VisionVPM_Implementation_Implementation_Task.listView-meta.xml
<ListView>
    <fullName>VisionVPM_Implementation_Implementation_Task</fullName>
    <columns>NAME</columns>
    <columns>Implementation_Task_Template__c</columns>
    <columns>Implementation_Plan__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Liz Zagalak</value>
    </filters>
    <label>VisionVPM Implementation</label>
    <sharedTo>
        <group>VisionVPM_Implementation</group>
    </sharedTo>
</ListView>